infra/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalyst-ingress
  namespace: catalyst-os
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
    - http:
        paths:
          - path: /api/py
            pathType: Prefix
            backend:
              service:
                name: catalyst-fastapi-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalyst-node-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalyst-frontend-service
                port:
                  number: 80
